[package]
name = "euler"
version = "0.1.0"
authors = ["caleb <cahill@mtu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
big_int = { path = "./big_int" }
number_theory = { path = "./number_theory" }
rand = "0.8.5"
primes = "0.3.0"
threadpool = "1.7.1"
sorted-vec = "0.8.2"
num-traits = "0.2.15"