[package]
name = "fraction"
version = "0.1.0"
authors = ["erik.dreyer <erik.dreyer@infinitecampus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
big_int = { path = "../big_int" }
number_theory = { path = "../number_theory" }