[package]
name = "number_theory"
version = "0.1.0"
authors = ["erik.dreyer <erik.dreyer@infinitecampus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primes = "0.3.0"
sorted-vec = "0.8.2"
num-traits = "0.2.15"